--- a/frontend/not-implemented.html
+++ b/frontend/not-implemented.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Not Implemented | William Price (Bobkidbob)</title>
+        <title>Not Implemented | William Price</title>
     </head>
     <body>
         <h1>Not Implemented</h1>
