--- a/frontend/method-not-allowed.html
+++ b/frontend/method-not-allowed.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Method Not Allowed | William Price (Bobkidbob)</title>
+        <title>Method Not Allowed | William Price</title>
     </head>
     <body>
         <h1>Method Not Allowed</h1>
